// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 35922,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 485657,
}
`;

exports[`TWAMM #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 40816,
}
`;

exports[`TWAMM #submitLongTermOrder for token0 gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 123236,
}
`;

exports[`TWAMM #submitLongTermOrder for token1 gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 143134,
}
`;

exports[`TWAMM single pool sell tests gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 155990,
}
`;

exports[`TWAMM single pool sell tests gas zeroForOne=false 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 160395,
}
`;
